[gd_scene load_steps=70 format=3 uid="uid://dxgrb1rjapq76"]

[ext_resource type="Script" path="res://scripts/lumiere.gd" id="1_3jle8"]
[ext_resource type="Texture2D" uid="uid://c258s65pwiupf" path="res://assets/sprites/Enchantress/Idle.png" id="1_uewwh"]
[ext_resource type="Texture2D" uid="uid://bc3t5i8b7x1cj" path="res://assets/sprites/Enchantress/Jump.png" id="2_s2eht"]
[ext_resource type="AudioStream" uid="uid://bb4qnwq5tdcvr" path="res://assets/sounds/Jump.wav" id="3_1h8p3"]
[ext_resource type="Texture2D" uid="uid://ciw3glrilwaet" path="res://assets/sprites/Enchantress/Attack_4.png" id="3_awlkr"]
[ext_resource type="Texture2D" uid="uid://dadac1l3q6qcq" path="res://assets/sprites/Enchantress/Run.png" id="4_7mxp3"]
[ext_resource type="AudioStream" uid="uid://pymm75pdc4um" path="res://assets/sounds/MagicLoop.wav" id="4_sbunb"]
[ext_resource type="AudioStream" uid="uid://qagywc8g8rpt" path="res://assets/sounds/FootStep.mp3" id="6_58n88"]
[ext_resource type="Texture2D" uid="uid://cdq5fej7betsh" path="res://assets/sprites/Enchantress/Dead.png" id="6_klshj"]
[ext_resource type="Texture2D" uid="uid://dichokh1a66yc" path="res://assets/sprites/decor/Free Smoke Fx  Pixel 05.png" id="6_pu5tg"]
[ext_resource type="Texture2D" uid="uid://ddw5vknpsgw1k" path="res://assets/sprites/lights/ddxt97e-141fe084-2604-4e10-b33a-94202ffb4315.png" id="9_wh4qh"]
[ext_resource type="PackedScene" uid="uid://d3k7f01mk0jkc" path="res://scenes/objects/magic_light.tscn" id="11_bc3x4"]
[ext_resource type="PackedScene" uid="uid://dngbj1ef678lw" path="res://scenes/objects/black_light.tscn" id="12_eyg0n"]
[ext_resource type="Texture2D" uid="uid://cei6vjla7f3ps" path="res://assets/sprites/lights/white_circle_thin-500x500.png" id="14_mvqwy"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7ebyv"]
polygon = PackedVector2Array(0, 59, -5, 64, 7.5, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1h8b"]
atlas = ExtResource("1_uewwh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_soeqx"]
atlas = ExtResource("1_uewwh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_28wnm"]
atlas = ExtResource("1_uewwh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u62qa"]
atlas = ExtResource("1_uewwh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gemu1"]
atlas = ExtResource("1_uewwh")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7johs"]
atlas = ExtResource("2_s2eht")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfby"]
atlas = ExtResource("2_s2eht")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnyol"]
atlas = ExtResource("2_s2eht")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kdbg"]
atlas = ExtResource("2_s2eht")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg55u"]
atlas = ExtResource("2_s2eht")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aj1a"]
atlas = ExtResource("2_s2eht")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy4d5"]
atlas = ExtResource("2_s2eht")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c4n2"]
atlas = ExtResource("6_klshj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t523i"]
atlas = ExtResource("6_klshj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmuha"]
atlas = ExtResource("6_klshj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t1w4"]
atlas = ExtResource("3_awlkr")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jki8i"]
atlas = ExtResource("3_awlkr")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bddby"]
atlas = ExtResource("3_awlkr")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4ltd"]
atlas = ExtResource("3_awlkr")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_myolv"]
atlas = ExtResource("3_awlkr")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_scghf"]
atlas = ExtResource("3_awlkr")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq2ln"]
atlas = ExtResource("3_awlkr")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad1xw"]
atlas = ExtResource("3_awlkr")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7oxd"]
atlas = ExtResource("3_awlkr")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1piwn"]
atlas = ExtResource("3_awlkr")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqbx7"]
atlas = ExtResource("4_7mxp3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_03pk7"]
atlas = ExtResource("4_7mxp3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mv7b"]
atlas = ExtResource("4_7mxp3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhay0"]
atlas = ExtResource("4_7mxp3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2k47"]
atlas = ExtResource("4_7mxp3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nj66"]
atlas = ExtResource("4_7mxp3")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvwsk"]
atlas = ExtResource("4_7mxp3")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cixck"]
atlas = ExtResource("4_7mxp3")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao6jx"]
atlas = ExtResource("6_pu5tg")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukq8a"]
atlas = ExtResource("6_pu5tg")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgfec"]
atlas = ExtResource("6_pu5tg")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yufbr"]
atlas = ExtResource("6_pu5tg")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fivbv"]
atlas = ExtResource("6_pu5tg")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pryl"]
atlas = ExtResource("6_pu5tg")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8lst"]
atlas = ExtResource("6_pu5tg")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_em5mm"]
atlas = ExtResource("6_pu5tg")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocmfi"]
atlas = ExtResource("6_pu5tg")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvqn1"]
atlas = ExtResource("6_pu5tg")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33psy"]
atlas = ExtResource("6_pu5tg")
region = Rect2(640, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o4ikh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1h8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soeqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28wnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soeqx")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u62qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gemu1")
}],
"loop": false,
"name": &"idle_2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7johs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcfby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnyol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kdbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg55u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aj1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy4d5")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c4n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t523i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t523i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmuha")
}],
"loop": false,
"name": &"lose",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t1w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jki8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bddby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4ltd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myolv")
}],
"loop": false,
"name": &"magic_end",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scghf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq2ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad1xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq2ln")
}],
"loop": true,
"name": &"magic_loop",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7oxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1piwn")
}],
"loop": false,
"name": &"magic_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqbx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03pk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mv7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhay0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2k47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nj66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvwsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cixck")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao6jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukq8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgfec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yufbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fivbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pryl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8lst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em5mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocmfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvqn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33psy")
}],
"loop": false,
"name": &"test_1",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sfaiv"]
radius = 20.0
height = 56.0

[sub_resource type="Animation" id="Animation_gobry"]
resource_name = "BL_Clignote"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BL:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 6.1, 7, 7.1, 7.6, 7.7, 8.2, 8.3, 8.6, 8.7, 8.9, 9, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BL:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.61, 1.61)]
}

[sub_resource type="Animation" id="Animation_us2y6"]
resource_name = "ML_clignote"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ML:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1, 2.4, 2.7, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ML:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_d4egy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ML:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BL:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ML:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BL:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.61417, 1.61417)]
}

[sub_resource type="Animation" id="Animation_5ho4w"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"test_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.61702, 0, 0.0720621, 1)]
}

[sub_resource type="Animation" id="Animation_qrjnp"]
resource_name = "lose"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"lose", &"lose", &"test_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_1und2"]
resource_name = "put_on_BL"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BL:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BL:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.61, 1.61)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8e7uh"]
_data = {
"BL_Clignote": SubResource("Animation_gobry"),
"ML_clignote": SubResource("Animation_us2y6"),
"RESET": SubResource("Animation_d4egy"),
"explode": SubResource("Animation_5ho4w"),
"lose": SubResource("Animation_qrjnp"),
"put_on_BL": SubResource("Animation_1und2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o4s4n"]

[node name="Lumiere" type="CharacterBody2D" groups=["Characters", "Lumiere"]]
z_index = 20
scale = Vector2(0.4, 0.4)
script = ExtResource("1_3jle8")
sfx_L_footsteps = ExtResource("6_58n88")
sfx_L_jump = ExtResource("3_1h8p3")
sfx_L_magic_charge = ExtResource("4_sbunb")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(1, 1)
occluder = SubResource("OccluderPolygon2D_7ebyv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
light_mask = 15
visibility_layer = 15
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_o4ikh")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_sfaiv")

[node name="sfx_player" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -32)
scale = Vector2(0.5, 0.5)
bus = &"SFX"

[node name="PointLight2D (?)" type="PointLight2D" parent="."]
visible = false
light_mask = 7
visibility_layer = 7
position = Vector2(0, -28)
scale = Vector2(0.572143, 0.709742)
color = Color(0, 0, 0, 1)
energy = 0.5
blend_mode = 1
range_item_cull_mask = 7
texture = ExtResource("9_wh4qh")
texture_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_8e7uh")
}

[node name="BL" parent="." instance=ExtResource("12_eyg0n")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -42)
monitoring = false

[node name="ML" parent="." instance=ExtResource("11_bc3x4")]
unique_name_in_owner = true
visible = false
modulate = Color(3.46541e-06, 0.831358, 0.840467, 1)
position = Vector2(0, -22.5)
collision_layer = 15
monitoring = false

[node name="Cristal_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Fragment_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Coyote_Timer" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.576471)
z_index = 1000
position = Vector2(4, -42)
monitoring = false

[node name="SpriteRange" type="Sprite2D" parent="Range"]
light_mask = 7
z_index = 1000
z_as_relative = false
scale = Vector2(1.38371, 1.38371)
texture = ExtResource("14_mvqwy")

[node name="PointLight2D" type="PointLight2D" parent="Range/SpriteRange"]
position = Vector2(7.15256e-07, -3.57628e-07)
scale = Vector2(0.997101, 0.997101)
texture = ExtResource("14_mvqwy")

[node name="CollisionRange" type="CollisionShape2D" parent="Range"]
scale = Vector2(-25.737, -25.737)
shape = SubResource("CircleShape2D_o4s4n")

[node name="DetectStuckDown" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -22)
target_position = Vector2(0, 20)
hit_from_inside = true

[node name="DetectStuckUp" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -6)
rotation = -3.14159
target_position = Vector2(0, 20)

[node name="DetectDarknessRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
position = Vector2(-52.5, -25)
rotation = -7.85397
target_position = Vector2(0.000232697, 35)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="DetectDarknessLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
position = Vector2(55, -25)
rotation = 1.57079
target_position = Vector2(0.000232697, 35)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="DetectDarknessUp" type="RayCast2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
position = Vector2(-1.54612e-12, 37.5)
rotation = -3.14159
target_position = Vector2(9.50693e-05, 37.5)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="DetectDarknessDown" type="RayCast2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
position = Vector2(-1.70985e-11, -110)
rotation = -6.28318
target_position = Vector2(0.00021549, 42.5)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="Cristal_Timer" to="." method="_on_cristal_timer_timeout"]
[connection signal="timeout" from="Fragment_Timer" to="." method="_on_fragment_timer_timeout"]
[connection signal="timeout" from="Coyote_Timer" to="." method="Coyote_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
